cmake_minimum_required(VERSION 3.12.0)
set(CMAKE_CXX_STANDARD 17)
set(deprecated-functions OFF)
set(webtorrent ON)
project(libtorrent)
file(GLOB_RECURSE SOURCE_FILES src/*.cpp)
add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES})
set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX .node)
target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_JS_INC} node_modules/node-addon-api include)
target_link_libraries(${PROJECT_NAME} torrent-rasterbar ${CMAKE_JS_LIB})
add_subdirectory(lib/libtorrent)
